Add "Range" feature.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     ],
     "activationEvents": [
         "onCommand:extension.textPastry.1toX",
-        "onCommand:extension.textPastry.0toX"
+        "onCommand:extension.textPastry.0toX",
+        "onCommand:extension.textPastry.range"
     ],
     "main": "./out/src/extension",
     "contributes": {
@@ -24,6 +25,10 @@
             {
                 "command": "extension.textPastry.0toX",
                 "title": "Text Pastry: 0 to X"
+            },
+            {
+                "command": "extension.textPastry.range",
+                "title": "Text Pastry: Range"
             }
         ]
     },
