--- a/package.json
+++ b/package.json
@@ -1,55 +1,62 @@
 {
-    "name": "vscode-text-pastry",
-    "displayName": "Text Pastry",
-    "description": "Extend the power of multiple selections in VS Code. Modify selections, insert numeric sequences, incremental numbers, generate uuids, date ranges, insert continuously from a word list and more.",
-    "version": "1.0.0",
-    "publisher": "jkjustjoshing",
-    "engines": {
-        "vscode": "^1.5.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "onCommand:extension.textPastry.1toX",
-        "onCommand:extension.textPastry.0toX",
-        "onCommand:extension.textPastry.AtoX",
-        "onCommand:extension.textPastry.range"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [
-            {
-                "command": "extension.textPastry.1toX",
-                "title": "Text Pastry: 1 to X"
-            },
-            {
-                "command": "extension.textPastry.0toX",
-                "title": "Text Pastry: 0 to X"
-            },
-            {
-                "command": "extension.textPastry.AtoX",
-                "title": "Text Pastry: A to X"
-            },
-            {
-                "command": "extension.textPastry.range",
-                "title": "Text Pastry: Range"
-            }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
-        "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
-    },
-    "dependencies": {
-        "lodash.sortby": "^4.7.0"
-    }
+  "name": "vscode-text-pastry",
+  "displayName": "Text Pastry",
+  "description": "Extend the power of multiple selections in VS Code. Modify selections, insert numeric sequences, incremental numbers, generate uuids, date ranges, insert continuously from a word list and more.",
+  "version": "1.0.0",
+  "publisher": "jkjustjoshing",
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:extension.textPastry.1toX",
+    "onCommand:extension.textPastry.0toX",
+    "onCommand:extension.textPastry.AtoX",
+    "onCommand:extension.textPastry.range",
+    "onCommand:extension.textPastry.uuid"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "extension.textPastry.1toX",
+        "title": "Text Pastry: 1 to X"
+      },
+      {
+        "command": "extension.textPastry.0toX",
+        "title": "Text Pastry: 0 to X"
+      },
+      {
+        "command": "extension.textPastry.AtoX",
+        "title": "Text Pastry: A to X"
+      },
+      {
+        "command": "extension.textPastry.range",
+        "title": "Text Pastry: Range"
+      },
+      {
+        "command": "extension.textPastry.uuid",
+        "title": "Text Pastry: uuid"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "tsc -p ./",
+    "compile": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "devDependencies": {
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.40",
+    "@types/uuid": "^2.0.29",
+    "mocha": "^2.3.3",
+    "typescript": "^2.0.3",
+    "vscode": "^1.0.0"
+  },
+  "dependencies": {
+    "lodash.sortby": "^4.7.0",
+    "uuid": "^2.0.3"
+  }
 }
