--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "engines": {
     "vscode": "^1.5.0"
   },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/jkjustjoshing/vscode-text-pastry"
+  },
+  "bugs": {
+      "url": "https://github.com/jkjustjoshing/vscode-text-pastry/issues",
+      "email": "jkjustjoshing@gmail.com"
+  },
   "categories": [
     "Other"
   ],
