--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vscode": "^1.0.0"
   },
   "dependencies": {
+    "copy-paste": "^1.3.0",
     "lodash.sortby": "^4.7.0",
     "uuid": "^2.0.3"
   }
