--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "bugs": {
     "url": "https://github.com/jkjustjoshing/vscode-text-pastry/issues",
-    "email": "jkjustjoshing@gmail.com"
+    "email": "josh@kramer.run"
   },
   "categories": [
     "Other"
@@ -69,13 +69,13 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^6.14.13",
     "@types/uuid": "^2.0.32",
-    "mocha": "^9.1.2",
+    "mocha": "^10.0.0",
     "typescript": "^4.4.3",
     "vscode": "^1.1.37"
   },
   "dependencies": {
     "copy-paste": "^1.3.0",
     "lodash.sortby": "^4.7.0",
-    "uuid": "^2.0.3"
+    "uuid": "^9.0.0"
   }
 }
