--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.3.1",
   "publisher": "jkjustjoshing",
   "engines": {
-    "vscode": "^1.5.0"
+    "vscode": "^1.51.0"
   },
   "repository": {
     "type": "git",
@@ -69,8 +69,10 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^6.14.13",
     "@types/uuid": "^2.0.32",
+    "@types/vscode": "^1.72.0",
     "mocha": "^10.0.0",
-    "typescript": "^4.4.3",
+    "prettier": "2.7.1",
+    "typescript": "^4.8.4",
     "vscode": "^1.1.37"
   },
   "dependencies": {
