--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
   },
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install"
+    "compile": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.48",
@@ -72,8 +71,7 @@
     "@types/vscode": "^1.72.0",
     "mocha": "^10.0.0",
     "prettier": "2.7.1",
-    "typescript": "^4.8.4",
-    "vscode": "^1.1.37"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "lodash.sortby": "^4.7.0",
