--- a/package.json
+++ b/package.json
@@ -62,18 +62,20 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run esbuild-base -- --minify && npm run esbuild-browser -- --minify",
+    "vscode:prepublish": "rm -rf out && npm run esbuild-base -- --minify && npm run esbuild-browser -- --minify",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
     "esbuild-browser": "esbuild ./src/extension.ts --bundle --outfile=out/browser.js --external:vscode --format=cjs --platform=browser",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
-    "test-compile": "tsc -p ./"
+    "pretest": "tsc -p ./",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.48",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^6.14.13",
     "@types/uuid": "^2.0.32",
     "@types/vscode": "^1.72.0",
+    "@vscode/test-electron": "^2.1.5",
     "esbuild": "^0.15.11",
     "mocha": "^10.0.0",
     "prettier": "2.7.1",
